# jazzys_cs100_project

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  main  main.cpp  main2.cpp  pseudo.txt  run.bash  tutorial.cpp
Character_header/: Character.h  Dragon.h  Enemy.h  Goblin.h  MainCharacter.h
Character_src/: Character.cpp  Dragon.cpp  Goblin.cpp  MainCharacter.cpp
Character_tests/: Character_tests.cpp  Goblintests.cpp  Mainchartests.cpp
addit_header/: Animations.h  Battle.h  GameManager.h  GameMap.h  Interface.h  Inventory.h  Level.h  Map.h  MenuPrinter.h  Object.h  Potions.h  Powers.h  Swords.h  Tutorial.h
addit_src/: Battle.cpp  GameManager.cpp  GameMap.cpp  Inventory.cpp  Level.cpp  Levels.cpp  MenuPrinter.cpp  Object.cpp  Potions.cpp  Powers.cpp  Swords.cpp  Tutorial.cpp  a  a.out  gameManager().cs
addit_tests/: BattleTest.cpp  GameManagertest.cpp  GameMaptest.cpp  Inventorytest.cpp  LevelsTest.cpp  MenuPrinterTest.cpp  Objecttest.cpp  PauseFeaturetest.cpp  Potionstest.cpp  PowersTest.cpp  Swordstest.cpp
